--- a/templates/base.html
+++ b/templates/base.html
@@ -62,8 +62,8 @@
                     </li>
                 </ul>
                 <div class="align-content-right">
-                    <button class="btn" type="button">Log in</button>
-                    <button class="btn" type="button">Register</button>
+                    <button class="btn" type="button" method="GET" href="for_url('login')">Log in</button>
+                    <button class="btn" type="button" method="GET" href="for_url('register')">Register</button>
                 </div>
             </div>
         </nav>
