base.html href updates

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,30 +34,30 @@
                         <a class="nav-link active" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Videos</a>
+                        <a class="nav-link disabled" href="/videos">Videos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Articles</a>
+                        <a class="nav-link disabled" href="/articles">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Guides</a>
+                        <a class="nav-link disabled" href="/mapPage">Maps</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Coaching</a>
+                        <a class="nav-link disabled" href="/info/coaching">Coaching</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Get Involved</a>
+                        <a class="nav-link disabled" href="/info/get-involved">Get Involved</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                    <li class="nav-item disabled">
+                        <a class="nav-link" href="/info/about">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                             aria-expanded="false">Links</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Halo Tracker</a></li>
-                            <li><a class="dropdown-item" href="#">Halo Query</a></li>
-                            <li><a class="dropdown-item" href="#">Leafapp.co</a></li>
+                            <li><a class="dropdown-item" href="https://www.halotracker.com">Halo Tracker</a></li>
+                            <li><a class="dropdown-item" href="https://www.Haloquery.com">Halo Query</a></li>
+                            <li><a class="dropdown-item" href="https://www.leafapp.co">Leafapp.co</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -84,11 +84,12 @@
                 <svg class="bi" width="30" height="24" aria-hidden="true">
                     <use xlink:href="#bootstrap"></use>
                 </svg> </a>
-            <span class="mb-3 mb-md-0 text-white">© 2025 Vanadam Esports</span>
+            <span class="mb-3 mb-md-0 text-white">© 2025 Vanadam Esports </span>
+            <p class="text-white"> Designed by Ryan Frere & Adam Davis for Vanadam Esports</p>
         </div>
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex pe-3">
             <li class="ms-3">
-                <a class="text-body-secondary" href="#" aria-label="Twitch">
+                <a class="text-body-secondary" href="https://www.twitch.tv/Vanadam" aria-label="Twitch">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-twitch"
                         viewBox="0 0 16 16">
                         <path
@@ -98,7 +99,7 @@
                 </a>
             </li>
             <li class="ms-3">
-                <a class="text-body-secondary" href="#" aria-label="x">
+                <a class="text-body-secondary" href="https://www.x.com/VanadamYT" aria-label="x">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-twitter-x"
                         viewBox="0 0 16 16">
                         <path
@@ -116,7 +117,7 @@
                 </a>
             </li>
             <li class="ms-3">
-                <a class="text-body-secondary" href="#" aria-label="youtube">
+                <a class="text-body-secondary" href="https://www.youtube.com/@VanadamYT" aria-label="youtube">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi bi-youtube"
                         viewBox="0 0 16 16">
                         <path
