further base.html nav improvements

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,9 +55,21 @@
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                             aria-expanded="false">Links</a>
                         <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="https://www.youtube.com/@VanadamYT">YouTube</a></li>
+                            <li><a class="dropdown-item" href="https://www.x.com/VanadamYT">Twitter / X</a></li>
+                            <li><a class="dropdown-item" href="https://www.discord.com/SsWANGRzav">Discord</a></li>
+                            <li><a class="dropdown-item" href="https://www.linktree.com/Vanadam">LinkTree</a></li>
+                            <li><a class="dropdown-item" href="https://www.twitch.tv/EuropeanHaloLeague">EHL</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                            aria-expanded="false">Tools</a>
+                        <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="https://www.halotracker.com">Halo Tracker</a></li>
                             <li><a class="dropdown-item" href="https://www.Haloquery.com">Halo Query</a></li>
                             <li><a class="dropdown-item" href="https://www.leafapp.co">Leafapp.co</a></li>
+                            <li><a class="dropdown-item" href="https://www.gamecoach.gg">GameCoach</a></li>
                         </ul>
                     </li>
                 </ul>
