--- a/templates/base.html
+++ b/templates/base.html
@@ -74,6 +74,7 @@
                     </li>
                 </ul>
                 <div class="align-content-right">
+                    <a href="/profile"><button class="btn" type="button">Account</button></a>
                     <a href="/login"><button class="btn" type="button">Log in</button></a>
                     <a href="/register"><button class="btn" type="button">Register</button></a>
                 </div>
