Site-error and Medkit.png

--- a/templates/siteerror.html
+++ b/templates/siteerror.html
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid align-content-center">
-    <div class="d-flex flex-column">
-        <span class="justify-self-center">Well this is embarassing.... an error has occurred</span>
-        <img class="img-fluid" src="https://i.redd.it/lzmo48vyew461.png" width=>
+
+    <div class="d-flex flex-column justify-content-center align-items-center m-auto">
+        <span class="flex-fill text-white text-center">Well this is embarassing.... an error has occurred</span>
+        <img class= "flex-fill" src="../static/Assets/Renders/Medkit.png" width="250px">
     </div>
-</div>
+
 {% endblock %}
 
 
